--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "overrides": {
